-Fixed an unexpected ability of Peach to spin-jump from off vines and on pressing of the ALT-JUMP while the JUMP key is held
-Fixed the GFX shaking of the upside down piranha plants when they got customized in some cases
-NPC freezing sound got an individual sound instead of the shell hit
-Frozen NPC breaking got an individual sound

Changes for 1.3.4
-Fixed the inability to use any custom sounds and custom music at level's custom data directory
-Added an ability to change sound setup (sample rate, channels, sample format, and the buffer size) via the [sound] INI section
-Optimized the work of a lazy-decompression algorithm workflow
-At credits, the bible quote has been replaced with a meme
-Fixed the vanilla bug: free-falling platforms getting confused when the player changes their power-up state
-Fixed an inability to autostart events when "restart level after death" mode is enabled on the world map
-Fixed the case when Pokey getting collapsed during walking on slopes
-Fixed an unwanted player bounce by a filter block after NPC stomp
-Added the "compat.ini" support for episode and level specific to enable/disable certain bugs of the old game
-Fixed the vanilla bug: player can get clipped into floor while standing on a block of a down-moving layer
-Fixed the vanilla bug: NPC can get clipped into floor while standing on a block of a down-moving layer
-Fence BGOs now can move player together with a moving layer as vine NPCs does
-Fixed the vanilla bug: attempt of player to jump from NPC standing together with getting pushed into the wall causes the clipping
-Fixed the vanilla bug: resolved an incorrect behavior of a skull raft cells that makes the raft being squished when reaching a barrier wall
-Credits look and performance has been improved
-Fixed the vanilla bug: Peach can't escape the running shell surf
-Loading screen now goes smoother (except Emscripten)
-Level testing will quit on success completion of a level