@@ -19,6 +19,7 @@ Changes for 1.3.4.1
 -Fixed the GFX shaking of the upside down piranha plants when they got customized in some cases
 -NPC freezing sound got an individual sound instead of the shell hit
 -Frozen NPC breaking got an individual sound
+-Added an ability to put the silence instead of the actual sound file by specifying the "silent=true" field instead of the "file=..."
 
 Changes for 1.3.4
 -Fixed the inability to use any custom sounds and custom music at level's custom data directory
